--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="index.html">MinJin</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,16 +23,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto w-100 justify-content-end">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -41,41 +38,48 @@
 
 
     <div class="container main-container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="page-header">
-                        <h1>About Me</h1>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <img src="assets/images/computer.jpg" alt="computers" style="width:200px;" height="200px;">
-                            <div class="caption">
-                                <h3>Computers</h3>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <img src="assets/images/dota.jpg" alt="gaming" style="width:200px;" height="200px;">
-                            <div class="caption">
-                                <h3>Gaming</h3>
-                            </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="page-header">
+                    <h1>Portfolio</h1>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/images/computer.jpg" alt="computers" style="width:200px;" height="200px;">
+                        <div class="caption">
+                            <h3>Computers</h3>
                         </div>
                     </div>
-    
-                    <div class="row">
-                        <div class="col-md-3">
-                            <img src="assets/images/rx7.jpeg" alt="cars" style="width:200px;" height="200px;">
-                            <div class="caption">
-                                <h3>Cars</h3>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <img src="assets/images/keyboard.png" alt="keyboards" style="width:200px;" height="200px;">
-                            <div class="caption">
-                                <h3>Keyboards</h3>
-                            </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/dota.jpg" alt="gaming" style="width:200px;" height="200px;">
+                        <div class="caption">
+                            <h3>Gaming</h3>
                         </div>
                     </div>
                 </div>
-    
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/images/rx7.jpeg" alt="cars" style="width:200px;" height="200px;">
+                        <div class="caption">
+                            <h3>Cars</h3>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="assets/images/keyboard.png" alt="keyboards" style="width:200px;" height="200px;">
+                        <div class="caption">
+                            <h3>Keyboards</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div>
+            copyright &copy;
+        </div>
+    </footer>
 </body>
+
 </html>
