changes to footer still can't get it right

--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,11 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div>
-            copyright &copy;
+    <footer class="footer">
+        <div class="container">
+          <span>copyright &copy;</span>
         </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
