--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
       </div>
     </div>
   </div>
-  <footer>
-    <div>
-      copyright &copy;
+  <footer class="footer">
+    <div class="container">
+      <span>copyright &copy;</span>
     </div>
   </footer>
 </body>
