--- a/portfolio.html
+++ b/portfolio.html
@@ -75,11 +75,11 @@
             </div>
         </div>
     </div>
-    <footer>
-        <div>
-            copyright &copy;
+    <footer class="footer">
+        <div class="container">
+          <span>copyright &copy;</span>
         </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
