--- a/index.html
+++ b/index.html
@@ -48,16 +48,10 @@
             <img src="assets/images/me.jpeg" class="img-fluid" alt="Responsive image">
           </div>
           <div class="col-md-9">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque dignissim, felis ut dictum
-              tristique,
-              nibh erat feugiat libero, sit amet fringilla mauris velit in mi. Duis tempus felis vitae
-              felis vulputate pretium. Nullam commodo, est ac auctor ornare, eros nisi fringilla sem,
-              non pulvinar tortor lorem sit amet sem. Aenean quis erat facilisis, porttitor ex cursus,
-              luctus enim. Curabitur et metus in lacus tristique sagittis et in lorem. Nunc id nisi et
-              neque fringilla ultricies. Aenean at feugiat elit, a posuere justo. Pellentesque egestas
-              dolor et nisi venenatis, nec fermentum urna fringilla. Etiam efficitur porta purus, id
-              posuere sem congue a.
+            <p>I was born in South Korea. I moved to atlanta when i was about 6 years old because my parnets wanted me
+              to get a better furture. I have always been interested in computers ever since i got my very own when i
+              was in middle school. I like to build my own computer by researching and looking up parts online. I also have instrest in cars. I mostly an in japanese cars make and model.
+              I also like to orginal parts of the car and replace them with aftermarket to make it look like my own.
             </p>
           </div>
         </div>
